--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -5,20 +5,36 @@
          <li>
             <a href="/distros" class="<%= path === '/distros' ? 'active' : '' %>">Distros</a>
          </li>
+         <% if (isAuthenticated) { %>
          <li>
             <a href="/hopping" class="<%= path === '/hopping' ? 'active' : '' %>">Hopping</a>
          </li>
-         <!--  <li>
+         <li>
             <a href="/admin/add-distro" class="<%= path === '/admin/add-distro' ? 'active' : '' %>">Add distro</a>
          </li>
          <li>
             <a href="/admin/distros" class="<%= path === '/admin/distros' ? 'active' : '' %>">Admin Distros</a>
-         </li> -->
-      </ul>
-      <ul>
-         <li>
-            <a href="/login">Login</a>
          </li>
+         <%} %>
       </ul>
+
+      <ul>
+         <% if (!isAuthenticated) { %>
+         <li>
+            <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
+         </li>
+         <li>
+            <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup</a>
+         </li>
+         <%} else {%>
+         <li>
+            <form action="/logout" method="POST">
+               <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+               <button type="submit">Logout</button>
+            </form>
+         </li>
+         <% } %>
+      </ul>
+
    </nav>
 </header>
